--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -11,20 +11,45 @@ body{
 
 
 header {
-    padding: 20px;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    padding: 20px 5px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #bea4938e;
     color: whitesmoke;
 }
 
+
+
 nav a {
     color: whitesmoke;
-    font-size: 20px;
+    font:bold;
+    font-size: 25px;
+    
 }
 
-nav {
-    float: right;
-    margin-top: -70px;
+.nav-list {
+    list-style: none;
+    margin-right: 20px;
+}
+
+.nav-list li {
+    display:inline;
+    padding: 0px 20px;
+}
+
+.nav-list li a {
+    transition: all 0.3s ease 0s;
 }
  
+.nav-list li a:hover{
+    transition: all 0.3s ease 0s;
+    color:brown;
+}
+ 
+
+
+
+
 
